--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hosonode/easyai-php",
-    "description": "A lot of AI & AI utility Helpers",
+    "description": "EasyAI-PHP is an open-source initiative designed to significantly simplify the entry into artificial intelligence for PHP-developers.",
     "keywords": ["ai", "php", "openai", "GPT-4", "GPT-3.5", "api", "language", "LLM", "vectorstore", "embedding"],
     "license": "MIT",
     "authors": [
@@ -9,6 +9,19 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "openai-php/client": "^0.8.5",
+        "symfony/http-client": "^7.0",
+        "nyholm/psr7": "^1.8",
+        "probots-io/pinecone-php": "^1.0",
+        "bunnycdn/storage": "^3.2",
+        "deeplcom/deepl-php": "^1.7"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
