Add suggested dependencies to composer.json
Three new suggested dependencies have been added to the composer.json file for EasyAI-PHP. These include probots-io/pinecone-php, bunnycdn/storage, and deeplcom/deepl-php, each of which are important for different functionalities of the project.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,11 @@
         "bunnycdn/storage": "^3.2",
         "deeplcom/deepl-php": "^1.7"
     },
+    "suggest": {
+        "probots-io/pinecone-php": "This is required for Pinecone Vector Storage",
+        "bunnycdn/storage": "This is required BunnyCDN HDD & SSD Storange.",
+        "deeplcom/deepl-php": "This is required for AI Translation."
+    },
     "autoload": {
         "psr-4": {
             "EasyAI\\": "src/"
