--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,11 @@
     "require": {
         "php": "^8.1",
         "openai-php/client": "^0.8.5",
-        "nyholm/psr7": "^1.8",
-        "probots-io/pinecone-php": "^1.0",
-        "bunnycdn/storage": "^3.2",
-        "deeplcom/deepl-php": "^1.7"
+        "nyholm/psr7": "^1.8"
     },
     "suggest": {
         "probots-io/pinecone-php": "This is required for Pinecone Vector Storage",
-        "bunnycdn/storage": "This is required BunnyCDN HDD & SSD Storange.",
+        "bunnycdn/storage": "This is required for BunnyCDN HDD & SSD Storange.",
         "deeplcom/deepl-php": "This is required for AI Translation."
     },
     "autoload": {
